--- a/admin_panel/admin.html
+++ b/admin_panel/admin.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <title>My First Admin</title>
-    <link rel="stylesheet" href="node_modules/ng-admin/build/ng-admin.min.css">
+    <link rel="stylesheet" href="../node_modules/ng-admin/build/ng-admin.min.css">
 </head>
 <body ng-app="myApp">
 <div ui-view></div>
-<script src="node_modules/ng-admin/build/ng-admin.min.js"></script>
+<script src="../node_modules/ng-admin/build/ng-admin.min.js"></script>
 <script type="text/javascript">
     var myApp = angular.module('myApp', ['ng-admin']);
     myApp.config(['NgAdminConfigurationProvider', function(NgAdminConfigurationProvider) {
